--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -4,7 +4,7 @@
   grid-template-rows: 50px auto auto;
   grid-template-areas: 
     "header header header aside"
-    "main   main   .      aside"
+    "main   main   main   aside"
     "footer footer footer aside";
 }
 
