--- a/my-app/src/main/Profile/Profile.css
+++ b/my-app/src/main/Profile/Profile.css
@@ -1,15 +1,25 @@
 .Profile{
+  margin: 0 1%;
   display: grid;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: 60px 60px auto;
+  grid-template-columns: 120px auto auto;
+  grid-template-rows: auto 60px 60px auto;
   grid-template-areas: 
+    "bgi bgi bgi"
     "img name ."
     "img about about"
     "posts posts posts";
 }
 
+.Profile-backGroundImg{
+  grid-area: bgi;
+  width: 100%;
+  height: 100px;
+  object-fit: cover;
+}
+
 .Profile-img{
   grid-area: img;
+  height: 120px;
 }
 
 .Profile-name{
