--- a/my-app/src/components/main/Profile/Profile.css
+++ b/my-app/src/components/main/Profile/Profile.css
@@ -1,39 +1,5 @@
 .Profile{
   margin: 0;
-  display: grid;
-  grid-template-columns: 120px auto auto;
-  grid-template-rows: auto 60px 60px auto;
-  grid-template-areas: 
-    "bgi bgi bgi"
-    "img name ."
-    "img about about"
-    "posts posts posts";
-}
-
-.Profile-backGroundImg{
-  grid-area: bgi;
-  width: 100%;
-  height: 100px;
-  object-fit: cover;
-}
-
-.Profile-img{
-  grid-area: img;
-  height: 120px;
-}
-
-.Profile-name{
-  grid-area: name;
-}
-
-.Profile-about{
-  grid-area: about;
-}
-
-.Profile h3{
-  margin-left: 1%;
-}
-
-.Profile-posts{
-  grid-area: posts;
+  display: flex;
+  flex-wrap: wrap;
 }
