--- a/src/components/main/Profile/Posts/Posts.css
+++ b/src/components/main/Profile/Posts/Posts.css
@@ -1,5 +1,8 @@
-.Profile-posts_card{
+.Profile-posts{
   display: flex;
   flex-wrap: wrap;
+  margin-top: 20px;
+  justify-content: space-between;
+  width: 100%;
 }
 
