--- a/src/components/main/Profile/ProfileInfo/ProfileInfo.css
+++ b/src/components/main/Profile/ProfileInfo/ProfileInfo.css
@@ -1,7 +1,7 @@
 .Profile-info{
   background-color: white;
   width: 100%;
-  height: 230px;
+  height: 250px;
   margin: 0;
   text-align: center;
   border-radius: 20px;
@@ -38,5 +38,6 @@
 
 .info-mainBlock-city{
   margin: 0;
+  color: grey;
 }
 
